# rules_go_ios_example

./: BUILD.bazel  README.md  WORKSPACE  main.go
tools/: bazel.rc
