load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    cgo = True,
    importpath = "github.com/znly/rules_go_ios_example",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "rules_go_ios_example",
    embed = [":go_default_library"],
    goos = "darwin",
    goarch = "arm64",
    visibility = ["//visibility:public"],
)
